src/styles/style.css
::selection {
  background-color: black;
  color: white;
}

* {
  box-sizing: border-box;
  margin: 0;
}

html {
  background-color: var(--bg--off);
  block-size: 100%;
  /* filter: invert(1); */
}

body {
  background-color: var(--bg);
  outline: 1px solid var(--border-color);
  display: flex;
  flex-direction: column;
  gap: 4rem;
  margin-inline: auto;
  max-width: 100%;
  min-block-size: 100%;
  padding: .5in;
  width: fit-content;
}

body>* {
  width: 600px;
  max-width: 100%;
}

header {
  display: flex;
  justify-content: space-between;
}

header,
footer {
  font-size: var(--font-size--small);
}

header a,
footer a,
blockquote a {
  color: inherit;
  text-decoration: 1px underline currentColor;
}

footer {
  color: var(--color--off);
  margin-block-start: auto;
}

footer>p {
  text-align: center;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Inter', sans-serif;
  font-weight: 700;
  letter-spacing: -.015em;
  margin-block-end: .5rem;
}

h1,
h2,
h3,
h4,
h5,
h6,
th {
  color: var(--color--headline);
}

h2,
h3,
h4,
h5,
h6 {
  margin-block-start: 2em;
}

h1>code,
h2>code,
h3>code,
h4>code,
h5>code,
h6>code {
  --font-size--monospace: 1.1em;
  font-weight: var(--font-weight-monospace--bolder);
  line-height: normal;
}

h1 {
  font-size: 34px;
}

h2 {
  font-size: 24px;
}

h3 {
  font-size: 20px;
}

h4 {
  font-size: 16px;
}

h5 {
  font-size: 14px;
}

h6 {
  font-size: 12px;
}

h6,
th {
  letter-spacing: .025em;
  text-transform: uppercase;
}

a {
  color: var(--color--anchor);
  text-decoration: none;
}

a:hover,
a:focus {
  text-decoration: underline 1px solid currentColor;
}

p,
li {
  hyphens: auto;
  text-align: justify;
}

ol {
  counter-reset: i;
  list-style-type: none;
}

ol,
ul {
  list-style-type: none;
  padding-inline-start: 1.5ch;
}

ol:not(li>ol),
ul:not(li>ul),
blockquote,
pre,
p:not(blockquote>p),
table {
  margin-block: 1rem;
}

li {
  margin-block: .25rem;
}

li::before {
  content: "-";
  padding-right: .5ch;
}

ol>li {
  counter-increment: i;
}

ol>li::before {
  content: counters(i, '.') ".";
  font-feature-settings: "tnum";
}

blockquote {
  color: var(--color--off);
  font-style: italic;
}

blockquote,
pre,
table {
  background-color: var(--bg--off);
  border-radius: var(--border-radius);
  outline: 1px solid var(--border-color);
}

blockquote,
pre {
  padding: .5rem;
}

blockquote * {
  background-color: unset !important;
  color: unset !important;
}

blockquote em {
  font-style: normal;
}

pre,
table {
  font-size: var(--font-size--small);
}

code {
  font-family: Inconsolata, monospace;
  font-size: var(--font-size--monospace);
  font-weight: var(--font-weight-monospace);
}

code:not(pre>code) {
  background-color: var(--mark--monospace);
  border-radius: var(--border-radius);
  padding-inline: .25em;
}

pre {
  line-height: 1.15;
  overflow-x: auto;
}

strong {
  background-color: var(--mark--strong);
}

strong,
th {
  font-weight: var(--font-weight--bolder);
}

em {
  background-color: var(--mark--emphasis);
  font-style: italic;
}

hr {
  border-bottom: unset;
  border-left: unset;
  border-right: unset;
  border-top: 1px solid var(--border-color);
  margin-block: 2rem;
}

table {
  display: block;
  background-color: var(--bg--off);
  border-spacing: 0;
  overflow-x: auto;
}

tbody tr:nth-of-type(2n) {
  background-color: var(--bg);
}

tr>*:first-of-type {
  padding-inline-start: .5rem;
}

tr>*:last-of-type {
  padding-inline-end: .5rem;
}

th,
td {
  padding: .25rem;
  vertical-align: top;
}

th code {
  text-transform: initial;
}

.prefers-dark {
  color-scheme: dark;
}

.prefers-dark-switch label {
  user-select: none;
  cursor: pointer;
}

.prefers-dark-switch label::after {
  content: "🌕";
}

.prefers-dark-switch input:checked+label::after {
  content: "🌑";
}

.prefers-dark-switch input+label:hover::after {
  content: "🌗";
}

